*Empty MediaWiki Message*

--- a/Veldhoeke_(Zwolle).mw
+++ b/Veldhoeke_(Zwolle).mw
@@ -1,5 +1,5 @@
 {{Ploats in Nederlaand
-| naam=Veldhoek
+| naam=Veldhoeke
 | breedtegroad=52/32
 | lengtegroad=6/8
 | inwoners=250
@@ -13,9 +13,9 @@
 | postcode=8024, 8025
 | soorte=Buurt en buurtschop
 |ofbeelding2=Map - NL - Zwolle - Wijk 40 Berkum - Buurt 20 Veldhoek.svg|oppervlak laand=3,10|oppervlak water=0,11|lokasie=|oppervlak=3,21}}
-'''Veldhoek''' ([[Zwols]]: ''Veld-oek'') is een buurt buurtschop in de gemiente Zwolle. De buurt lig in de wiek [[Bärkum (wiek)|Bärkum]].
+'''Veldhoek''' ([[Zwols]]: ''Veld-oeke'') is een buurt en buurtschop in de gemiente Zwolle. De buurt lig in de wiek [[Bärkum (wiek)|Berkum]].
 
-Körtbi'j Veldhoek lig de [[Ni'je Vechte]]. De Ni'je Vechte is zo rund [[1600]] egraven zodät handel uut [[Westfalen]] ([[Bentheimer zandstien]]) rapper bi'j Zwolle an kon kommen vanof de [[Vechte]].<ref>https://www.ontdekdeijsseldelta.nl/IJsseldelta/veldhoek/</ref>
+Körtbi'j Veldhoeke lig de [[Ni'je Vechte]]. De Ni'je Vechte is zo rund [[1600]] egräven zodet handel uut [[Westfalen]] ([[Bentheimer zandstien]]) sneller bi'j Zwolle an kon kommen vanof de [[Vechte]].<ref>https://www.ontdekdeijsseldelta.nl/IJsseldelta/veldhoek/</ref>
 
 == Galleri'je ==
 <gallery widths="400" heights="400">
