*Empty MediaWiki Message*

--- a/Bruggenhoeke.mw
+++ b/Bruggenhoeke.mw
@@ -1,6 +1,6 @@
-{{Ploats in Nederlaand|naam=Bruggenhoek|breedtegroad=52/32|lengtegroad=6/8|provincie=Oaverijssel|gemeente=Zwolle|region=NL-OV|soorte=Buurtschop}}
+{{Ploats in Nederlaand|naam=Bruggenhoeke|breedtegroad=52/32|lengtegroad=6/8|provincie=Oaverijssel|gemeente=Zwolle|region=NL-OV|soorte=Buurtschop}}
 
-'''Bruggenhoek''' ([[Zwols]]: ''Bruggen-oek'') is een [[buurtschop]] in de gemiente [[Zwolle]]. Et lig in et noordoosten van de gemiente en lig körtbi'j [[Brinkhoek]] waor völle rieke luu woont.
+'''Bruggenhoeke''' ([[Zwols]]: ''Bruggen-oeke'') is een [[buurtschop]] in de gemiente [[Zwolle]]. Et lig in et noordoosten van de gemiente en lig körtbi'j [[Brinkhoek|Brinkershoeke]] waor völle rieke luu woont.
 
 {{Zwolle}}
 {{Zwolle buurtschoppen}}
