*Empty MediaWiki Message*

--- a/Emst.mw
+++ b/Emst.mw
@@ -1,4 +1,4 @@
-'''Emst''' is een därpien op de [[Veluwe]] in de gemeente [[Epe]] in de [[Nederlaand|Nederlanse]] previnsie [[Gelderland]]. 't Hef ongeveer 3.000 inwoners (bron: CBS). Emst is een toeristisch darp. In Emst he-j ok een 21 bunder grote sauna zitten.
+'''Emst''' (ook wel ''Ems'') is een därpien op de [[Veluwe]] in de gemeente [[Epe]] in de [[Nederlaand|Nederlanse]] previnsie [[Gelderland]]. 't Hef ongeveer 3.000 inwoners (bron: CBS). Emst is een toeristisch darp. In Emst he-j ok een 21 bunder grote sauna zitten.
 
 Emst ontstond in de [[17e eeuw]] tussen de kaddestrale gemeente Epe en [[Une]] in. Emst was toe een [[buurtschop|buurtschap]] en ontwikkelde zich in de tweede helfte van de [[19e eeuw]] töt een [[kärkdarp]]. Um te beginnen bouwen ze naost de kärke in Emst ok nog een schole dät veur de ontwikkeling van 't darp mos zörgen. 't Steet wel vast dät in de [[18e eeuw]] al les is egèven in Emst. Toch stellen dit niet echt veul veur umdät 't därpien in de [[17e eeuw|17e]] en gedeeltelijk ok de [[18e eeuw]] allenig uut boeren bestond. Die schole is dus een hele veuruutgang ewest veur Emst en die was ok neudig umdät 't darp inmiddels al aorig egruuid was.
 
