--- a/Dalsen_(gemiente).mw
+++ b/Dalsen_(gemiente).mw
@@ -27,7 +27,7 @@ As [[partnergemiente]] hef Dalsen sund 1995 de stad [[Hörstel]] in de [[dielsta
 't Dörp Dalsen lig an de revier de [[Vechte]] en an de rieksweg / pervèensiale weg N34/N340 [[Zwolle (Oaveriessel)|Zwolle]]-[[Emmen]]-[[Zuudlaoren]]. Ni'jlusen lig aan de Autoweg [[Asselt]]-[[Koevern]].
 
 == Kernen ==
-[[Ankum]], [[Broekhuzen]], [[Dalmsholte]], [[Dalsen]], [[Dalserveld]], [[De Marshoek]], [[De Meele]], [[Den Hulst]], [[Emmen (Dalsen)|Emmen]], [[Engelaand (Dalsen)|Engelaand]], [[Gerner]], [[Hessum]], [[Holt_(plaatse)|Holt]], [[Hoonhorst]], [[Lemelerveld]], [[Lenthe]], [[Lusenerveld]], [[Millingen (Dalsen)|Millingen]], [[Ni'jlusen]], [[Ooster-Dalsen]], [[Oldlusen]], [[Oldlusenerveld]], [[Rechteren]], [[Slennebroek]], [[Strenkhaor]], [[Welsum]]
+[[Ankum]], [[Broekhuzen]], [[Dalmsholte]], [[Dalsen]], [[Dalserveld]], [[De Marshoek]], [[De Meele]], [[Den Hulst]], [[Emmen (Dalsen)|Emmen]], [[Engelaand (Dalsen)|Engelaand]], [[Gerner]], [[Hessum]], [[Holt_(plaatse)|Holt]], [[Hoonhörst]], [[Lemelerveld]], [[Lenthe]], [[Lusenerveld]], [[Millingen (Dalsen)|Millingen]], [[Ni'jlusen]], [[Ooster-Dalsen]], [[Oldlusen]], [[Oldlusenerveld]], [[Rechteren]], [[Slennebroek]], [[Strenkhaor]], [[Welsum]]
 
 ==Schrieveri'je==
 In dizze lieste vin ie boeken die oaver de gemiente Dalsen gaot.
