*Empty MediaWiki Message*

--- a/Kampereilaand.mw
+++ b/Kampereilaand.mw
@@ -1,4 +1,4 @@
-t '''Kampereilaand''' is n [[Nederlaand]]s [[eilaand]] in de monding van de Iessel bi'j Kampen, t grenst an de [[Iessel]], t [[Kattendiep]], t [[Ketelmeer]], t [[Zwärte Meer]] en t [[Ganzediep]]. t Eilaand is 3.000 bunder groot en ligt in de [[Oaveriessel|Overiesselse]] gemeente [[Kampen (Overiessel)|Kampen]].
+t '''Kampereilaand''' (in Kampen ook wel ''t Binneneiland''<ref>Reeks Nederlandse dialectatlassen. Dialektatlas van Zuid-Drenthe en Noord-Overijssel</ref>)is n [[Nederlaand]]s [[eilaand]] in de monding van de Iessel bi'j Kampen, t grenst an de [[Iessel]], t [[Kattendiep]], t [[Ketelmeer]], t [[Zwärte Meer]] en t [[Ganzediep]]. t Eilaand is 3.000 bunder groot en ligt in de [[Oaveriessel|Overiesselse]] gemeente [[Kampen (Overiessel)|Kampen]].
 
 In de 19e eeuw beston Kampereilaand uut drie eilaanden: [[Kattenweerd]], [[Raos-Pieperstärt]] en [[Binneneilaand]]. De drie eilaanden waren van mekare eskeiden deur t [[Rechterdiep]] en t [[Noorddiep]]. In de 20e eeuw kreeg t Kampereilaand de vörm die t now ef. t Rechterdiep wier edempt, t Noorddiep wier bi'j de Iessel of-esleuten, t Kattendiep wier egraven en der kwamen ni'je inpolderingen op de Zuderzee (Rechterveld, Willem Meijerpolder, Stikkenpolder en Zwärtemeerpolder).
 
