*Empty MediaWiki Message*

--- a/Lieste_mit_Nedersaksiese_exoniemen.mw
+++ b/Lieste_mit_Nedersaksiese_exoniemen.mw
@@ -1510,7 +1510,7 @@ Sommige plaotsen buten t [[Nedersaksies]]e taalgebied, en buten Nederlaand, hebb
 |-
 | [[Iesselburg]] || Isselburg
 |-
-| [[Itterbeke]] || Itterbeck
+| [[Itterbeke]]/Itterbek(ke) || Itterbeck
 |-
 | [[Jadeboezem]] || Jadebusen
 |-
