/* Uutspraok in IPA */

--- a/Zwärte_Wäter.mw
+++ b/Zwärte_Wäter.mw
@@ -17,7 +17,7 @@ De uterweerden van 't Zwærte Wæter vörmen de belangriekste gruuiplæse van de
 == Uutspraok in [[Internasjonaal Klaankenskrift|IPA]] ==
 [[De Sluus|Zwærtsluus]]: [tz̯ʋɑtə ʋɑːtər]
 
-[[Zwolle]]: [t z̯ʋætə ʋaːtə<small>ʀ</small>]
+[[Zwolle]]: [t z̯ʋætə ʋæːtə<small>ʀ</small>]
 
 [[Asselt]]: [tsʋɑtə ʋaːtər]
 
