WIU - groot onderhold

--- a/Verleevdheid.mw
+++ b/Verleevdheid.mw
@@ -1,35 +1,36 @@
-[[File:1873 Pierre Auguste Cot - Spring.jpg|thumb|250px|De verleefdheaid van twee persoonn oet-ebeeld in n skilderieje van ''Pierre August Cot'', ehetn ''De Leante''.]]
-'''Verliefdheaid''' is ne [[emosie]] dee'j biej mensken veendn könt. t Kan veurkömn in ne liefdesrelasie, moar t kan ok eanziejdig veurkömn, wat betekkent det de eane wal interesse hef in de oandere moar de oandere nich in de eane. t Kan slechts eankele wekken öf daagn duurn, moar sommigen hebt t öar völle leaven.
-De readn det verliefdheaid rap weer oawer geet kan verskiln van persoon töt persoon. Biej sommigen blif t heel lange umdet degene dee verliefd is ok de verliefdheaid van de oandere krig, biej oanderen blif t moar kört umdet t een plötselinge en tiedelike opspöllige van de [[hormoon|hormonen]] is dee noa ne körte tied wear veurbiej is.
+[[File:1873 Pierre Auguste Cot - Spring.jpg|thumb|250px|De verleevdheaid van twee mensken oetbeeld in ''De Lente'', een skilderieje van ''Pierre August Cot''.]]
+'''Verleevdheid''' is een [[geveul]] wat bie mensken veurkump. Et kan zik veurdoon in ne leefdesverholding, moar ok eenziedig wean. Dat betekkent dat 'n enen wal interesse hef in nen anderen, mar andersum nich. Verleefdheid kan een paar wekken of dagen anholden, mar bie wat leu doert et öar hele leaven.
 
-== Karakteristiekn ==
-Verliefdheaid is wannear ne persoon nen zeer grote antrekkigeskracht veult noar nen oanderen, det vake nich vriewillig gebeurt en ok vake kerakteriseerd wörd met ne behoofte van weaderziedse geveulns van de geliefde. Iej wordt echt helemoal met-etrökn deur deegene en köant oewe gedachtn nergns oanders op richten. Deur sommigen wörd ok de [[seksualiteait]] as n belangriek onnerdeel ezeen; zeeleu zegt det verliefdheaid de zeuktocht veur nen potensjeeln sekspartner is.
+De readen dat verleevdheid oavergeet kan van menske töt menske anders wean. Wat leu blievt lange verleevd umdat ze dezelfde geveulens van anderen weerum kriegt. Bie anderen kan et ne plötselinge, körte opspölling van de hormonen wean, dee noa körten tied weer ofdrif.
 
-Verliefdheaid kan ok ''[[dwaze verliefdheaid]]'' wordn. Disse verliefdheaid kan ok ne obsessie wordn, woarbiej biej de geleefde de positieve en oantreklike kaantn oawerdreven wordt, terwiel de negatieve en ofstotelike kaantn biejnoa of heelmoal erkend wör. Hiermet krie'j n geperfeksjoneerd beeld van de geleefde.
+== Karakteristieken ==
+Verleevdheid hef as kenmark dat nen persoon zik stark antrökken veult deur nen anderen. Dat geet nich altied vriewillig. Vake is der ook behoovte um bliekens van geneagenheid van de ander weerum te kriegen. Iemand den as verleevd op een ander is, kan an weinig anders denken en ziene gedachten wordt veur een groot deel innömmen deur de persoon woarop as de persoon verleevd is. Wat leu meant dat seksualiteit der een veurnaam onderdeel van is en dat verleevdheid enkel ne zeuktocht is noar seksgenoten.
 
-Verliefdheaid wör ekenmarkt deur t völle deankn an de geleefde, en de behoofte um um te verdeadign as nen oandern negatief oawer um is. Verder köant extreme vörme van [[vreugde]] en [[wanhoop]] ontstoan, ofhangend van of de verliefdheaid wal of nich weaderzieds is. Biej mekoar enömn is t zo det iemand weg-edreagn wörd deur geveulns van [[passie]] en [[leefde]] töt op ne situasie woar t op ne verslavige begeent te liekn. Oawer t aalgemeen geet t saamn met ne grote passie of verwoonderige vuur iemand. Veur degeenn dee't nog nimmer earder met-emaakt hebt kan t verkeerd begrepn wordn en as (seksuele) fantasiejn ezeen wordn, moar ok as ne konstruksie van romantiese fiksie.
+Verleevdheid kan ook deursloan. Dan wördt et ne obsessie en oaverdrif 'n leevhebbenden de gode en antrekkelike egenskoppen van 'n geleevden, terwiel as denne de de ogen slot veur de slechte en minder mooie kanten.
 
-Verleefdheaid is nich t zelfde as leefde. Tarwiel t biej liefde nich per se fysiek möt wean moar t ok oawer fysieke en geestlike gesteldheaid wean kan, könt ze biej verliefdheaid de behoofte veuln um aait biej deegene te wean, um wellicht te goan [[zoenn]] of zölfs [[seksuele hoandeligen]] oet te voern.
+Ene den as verleevd is, dech onwies völle an 'n geleevden en wil der veur in et gewear kommen as anderen der lellike dinge oaver zegt. Der könt wiedgoande vörme van vreugde en wanhoppe ontstoan, ofhangend van of de verleevdheid wal of nich weerzieds is. Nauw bekekken könt biekommende geveulens van passie en leevde zo stark wean dat et op ne verslaving lik. Deur mekander is der bie verleevdheid grote passie of verwondering veur een ander menske. Leu dee as et noch nich eerder metmaakt hebt, kan et verwesseld worden met fantasie of ne konstruktie van romantische fictie.
 
-== Onnerdeeln ==
-Verliefdheaid geet aajt saamn met nen groten antrekkingskracht op de oandere persoon an. Oandere onnerdeeln zeent de behoofte veur beantwöardige, de angst veur ofwiezige, ne nich te behealpn verleagnheaid in de umgevige van de geleefde, en in t geval van ginne weaderziedse verliefdheaid vaak t indeankn det de oandere achter zinne neutraliteait woarskienlik wal verliefdheaidsgeveulns hef. Dat elke hoandeling dee hee oonderneamp vuur ne meuglike aksie van verbörgn verliefdheaid wordn an-ezeen.
+Verleevdheid is wat anders as ''leevde''. Bie leevde hoovt et nich per se um anraking en noabieheid te goan en kan iemand ook op ofstand leevde veulen. Ene den as verleevd is, hef ne starke behoovte um aait bie den anderen te wean en em al dan neet op seksuele wieze an te raken.
 
-Verliefdheaid steurt alle oandere geveulns van twiefel en gevoar noar n achtergroond, woardeur alle aksies en gedachtn en geveulns helemoal um de geleefde dreeit, en veardere negatieve kaantn en moeilikheedn wordt vergetn.
+== Kenmarken ==
+Verleevdheid geet aait samen met nen groten antrekkingskracht noar nen ander. Andere kenmarken zint de behoovte an beantwöarding, angst veur ofwiezing, ne nich te behelpen verleagenheid in de nöagte van de geleevde, en as der gin anwiezingen veur weaderziedse verleevdheid komt, vaak et indenken dat den anderen hemelik ook wal verleevd is mar dat nich löt zeen. Dat allens wat den ander dut, veur ne verdekte leevdesverkloaring anzeen kan worden.
 
-=== Eenziedig deankn en fantasieje ===
-Tiedens de verliefdheaid wordt alle aksies en situasies in t leaven terugge-bracht op de geleefde. Biej alns wa'j doot denkt iej det t better is as de geleefde drbiej is, en biej alns wat dr gebeurt wörd t noar de geleefde herleaidt, zölfs al hef dr de geleefde nog nooit wat van zeen of oawer heurd. As dr nog ginne verbeendige tusken ne aksie en de geleefde was, dan wörd t wal op-emaakt as t gebeurt. Alns wörd zo emaakt en ezeen det t op een of oandere manier wal meuglik wean möt.
+In wat gevallen verwient alle andere geveulens van twiefel en gevoar noar 'n achtergrond. Alle handelingen, gedachten en geveulens dreit um 'n geleevden, minder mooie kanten wordt vergetten.
 
-Fantasiejn van de geleefde dee oawer (te) verregoande ideejn goat wordt vake weg-eloatn deur de verleefde. Söms is t fantaseern terug-zeend. Iets det deur de verleefde as bewies det de geleefde weerzieds verleefd is wör oawerdacht. As iets wat noch nooit earder veurkömn dead wör deur de verliefde zoo ne situasie verzunn en wörd ehopt det t ok in de realiteait gebeurn geet.
+=== Eenziedig denken en inbeelding ===
+Nen verleevden brech allens in et leaven weerum op ne(n) geleevde(n). Bie allens wat den verleevden dut, meant deegenne at et better is as 'n geleevden der bie is. Bie allens wat der gebeurt, wördt et noar de geleevde herleided, zölfs as de geleevde der niks van weet.
 
-De fantasiejn könnt lange bröggen sloan tusken de verbeeldige en de reoaliteait van de verliefde. De lengte en in-ewikkeldheaid van de fantasiejn wör vast-esteld döar de tied en vriejheaid dee de verliefde hef. De gelukzoaligheaid van t verzönn'n möment van völtrekkige as de möglikheaidn van t töt woarheaid wörn van de fantasieje steads greuter wör (zölfs aal is t önwoarskiejnlik). t Is nich aajt prettig zoo te denkn, en as ofwiejzige woarskiejnlik wör könnt de edaktn wechseln öp wanhoop en söms zölfs [[zelfdödige]] an.
+Fantasiejn van de geleefde oaver (te) wiedgoande ideeën, geet de verleefde an veurbie. Mangs is et fantaseren achterof. Ne handeling of gebeurtenis wat de verleefde as bewies zut dat de geleefde weerzieds verleefd is, wördt voordan oaverdacht. Mangs verzint verleevden situaties woarvan as ze hopt dat et ook in et echt zo zal goan, al is et mangs onwoarskienlik. 
 
-Fantasiejn könnt ok in dreume töt uutige komn. Disse dreume zeent vaak zwoar emosioneel en könt n dreumer in wanhoop wakker loatn wördn. Dreume könt de geveulens en gedachten loatn opniej loatn beginn op n momeant det de (veurmoalig) verleefde zinne geveulens (biejnoa) nich mear had.
+Wat fantaseert zo slim dat et in et echt nich veur te stellen is. Kans op ofwiezing is dan groot, wat töt wanhoppe en in wiedgoande gevallen zelfs töt zelfdoding kan leiden.
+
+Starke verleevdheid kan ook de dreume van 'n verleevden sturen, den as der dan stark emotioneel van wakker kan worden. Ne hoaste veurbieje verleevdheid kan deur nen starken dreum weer vanniejs opwellen.
 
 [[File:Rejection.jpg|thumb|100px|Ofwiezige in ne Amerikaanse ''High School''.]]
-=== Angst veur ofwiejzige ===
-Ondanks det n noadruk veuraal op de positieve eaignskopn ezet wörd en dr ne grote hoppe op weaderziejdse geveulens is, is dr ook n angst veur ofwiezige. Det kan dr veur zorgn det de verleefde zik heal ongemakkelik en verleagn geet veuln in de noabiejheaid van de geleefde. Meastieds geet det ok saamn met n geveul van zölftwiefel.
+=== Angst veur ofwiezing ===
+Ondanks at de noadruk meest ligt op gode egenskoppen van de ander, is der vake ook groten angst veur ofwiezing. Dat löt nen verleevden zik ongemakkelik en verleagen veulen as den anderen in de nöagte is. Et wakkert mangs ook starke geveulens van twiefel an zikzölf op.
 
-Desöndanks is t in de measte gevaln zoo det n angst veur ofwiezige dr veur zorgt det de verleefdheaid ophoold as de verliefdheaid nich weaderzieds is, en zölfs aal zeent beaide partiejen in mekoar interesseard, dan kan t nog aait zo wean det dr ginne relasie keump umdet beaidn de angst veult veur t uutlegn van öare kerakteristiekn an mekoar in de angst det de oandre 'm dan trögtrekt.
+Deur dizze angst höldt de verleevdheid op den doer vanzölf op as et nich beantwoord wördt. Zelfs as beide zieden interesse hebt in mekander kan et nog zo wean dat et op niks oetdreit, umdat beide partiejen meant dat ze te slim van mekander verskilt en zik terugtrekt.
 
 === Hoppe ===
 Verleefdheaid öntsteet en blif allean as dr ok hoppe biej is. De boasis veur verliefdheaidshoop is measttieds nich reëel moar interpreteard zooas de verliefde t gearne zeen wilt. De hoop spöart de verliefde an öm öp teknen van weaderziejdse evoolns an te zookn, en elke beweagige en uutsproak en edragspetroon wör anoaliseerd veur teknen dee angeven det d'r ne kaans is.
@@ -40,7 +41,7 @@ t Besef det ne verliefdheaid nich weaderziejds is kan d'r ne heale tied oawer do
 
 
 === Lichoamelike effektn ===
-[[File:Andrebortoliejuuh.jpg|thumb|250px|N verliefd köppel.]]
+[[File:Andrebortoliejuuh.jpg|thumb|250px|Een verleevd stel.]]
 Van de verliefdheaid kö'j [[heartklöppige|heartklöppigen]], [[tremor|tremoren]], [[wit wegtrekn]], [[bloozn]], [[vergreutige van de pupil]] en [[algemiene zwokheaid]] kriejn. [[Onhaandigheaid]], [[stöttern]], [[verleagnheaid]] en [[verwarrige]] zeent t meast veurkömmnde öp t edragsniveau. Iej könnt ziek wörn, last kriejn van [[duuzeligheaid]] en [[hoofdpien]], enzovöart. D'r skiejnen zölfs evaln bekeand te wean woarin mensken flaauw-evaln zeent.
 
 D'r is bezorgdheaid, nervöasiteait en ön-erustheaid ömde'j angstig wean könnt de'j döar too te geven a'j evoolns nen woaren raamp öntkeetn'n doot. Völle van de psychologiese andoonigen kömmt van de angstn dee mit verliefdheaid soamn goat. Measttieds kömmt disse dreks öf vlöks noa n kontakt mit de eliefde, en ereandern doarnoa voak vlög in t evool in extoase te wean öf wanhoop.
@@ -50,7 +51,7 @@ De hoge sensiviteait dee d'r mit soamn goat lett ök voak öp de [[lichoamssproa
 [[Zölfbewustheaid]], [[woakzoamheaid]], [[bewustelikheaid]] en ne enörme hoovölleheaid energie goat in t lichoam roond. t Evool kö'j in t midn van de borst, de groond van de [[keel]], de [[darm|därmn]] en söms ök in de [[eslachtsdeil|eslachtsdeiln]] vooln. Det kan ebeurn a't ne situoasie van weaderkerigheaid is, moar kan söms nöch arger wean in tiedn van wanhoop.
 
 === [[Seksuoaliteait]] ===
-[[File:Just love 2.jpg|thumb|200px|N zoen'nd köppel.]]
+[[File:Just love 2.jpg|thumb|200px|Een zoenend köppelken.]]
 Bewustelikheaid van de [[seksuele antrekkige]] is wichtige biej verliefdheaid, moar biejnoa neujt t deeng woar t meast öp elet wör; measttieds wör t as "lichoamelike veurdeiln" ezeen. Desöndaanks is t zoo de't meast konsisteante önnerdeil van de verliefdheaid t [[poarn]] is, nich allean as (bevreadignde) seksuele inneraksie moar ök as verplichtige.
 
 Verliefdheaid kan intenser wörn noa seksueel kontakt, en mit ne greutere verliefdheaid kömmt n greuter verlangn veur seksueel kontakt. t Is voak zoo det seksueel kontakt de önzekkerheaid wegsloat, moar rechtevoorts hooft det nich mear zoo te wean.
