*Empty MediaWiki Message*

--- a/Verleevdheid.mw
+++ b/Verleevdheid.mw
@@ -6,7 +6,7 @@ De readen dat verleevdheid oavergeet kan van menske töt menske anders wean. Wat
 == Karakteristieken ==
 Verleevdheid hef as kenmark dat nen persoon zik stark antrökken veult deur nen anderen. Dat geet nich altied vriewillig. Vake is der ook behoovte um bliekens van geneagenheid van de ander weerum te kriegen. Iemand den as verleevd op een ander is, kan an weinig anders denken en ziene gedachten wordt veur een groot deel innömmen deur de persoon woarop as de persoon verleevd is. Wat leu meant dat seksualiteit der een veurnaam onderdeel van is en dat verleevdheid enkel ne zeuktocht is noar seksgenoten.
 
-Verleevdheid kan ook deursloan. Dan wördt et ne obsessie en oaverdrif 'n leevhebbenden de gode en antrekkelike egenskoppen van 'n geleevden, terwiel as denne de de ogen slot veur de slechte en minder mooie kanten.
+Verleevdheid kan ook deursloan. Dan wördt et ne obsessie en oaverdrif 'n leevhebbenden de gode en antrekkelike egenskoppen van 'n geleevden, terwiel as den zik de ogen slot veur de slechte en minder mooie kanten.
 
 Ene den as verleevd is, dech onwies völle an 'n geleevden en wil der veur in et gewear kommen as anderen der lellike dinge oaver zegt. Der könt wiedgoande vörme van vreugde en wanhoppe ontstoan, ofhangend van of de verleevdheid wal of nich weerzieds is. Nauw bekekken könt biekommende geveulens van passie en leevde zo stark wean dat et op ne verslaving lik. Deur mekander is der bie verleevdheid grote passie of verwondering veur een ander menske. Leu dee as et noch nich eerder metmaakt hebt, kan et verwesseld worden met fantasie of ne konstruktie van romantische fictie.
 
