*Empty MediaWiki Message*

--- a/Connecticut.mw
+++ b/Connecticut.mw
@@ -1,5 +1,5 @@
 {{Sy dv|Sy [[Connecticut (düürverwyssyde)]] vöär andere beteykenissen van Connecticut.}}
-{{Amerikanse staot
+{{Amerikaanse staot
 | naam = State of Connecticut
 | biejnoam = ''The Constitution State''
 * ''The Nutmeg State''
