*Empty MediaWiki Message*

--- a/Connecticut.mw
+++ b/Connecticut.mw
@@ -1,19 +1,19 @@
 {{Sy dv|Sy [[Connecticut (düürverwyssyde)]] vöär andere beteykenissen van Connecticut.}}
 {{Amerikaanse staot
 | naam = State of Connecticut
-| biejnoam = ''The Constitution State''
+| biejnaom = ''The Constitution State''
 * ''The Nutmeg State''
 * ''The Provisions State''
 * ''The Land of Steady Habits''
-| vlagge = [[Bestand:Flag of Connecticut.svg|125x100px|Flagge van Connecticut]]
-| wapen = [[Bestand:Seal of Connecticut.svg|75x100px|Waopen van Connecticut]]
+| vlagge = [[Bestaand:Flag of Connecticut.svg|125x100px|Vlagge van Connecticut]]
+| waopen = [[Bestaand:Seal of Connecticut.svg|75x100px|Wåpen van Connecticut]]
 | kaorte = Map of USA CT.svg
 | heufdstad = [[Hartford (Connecticut)|Hartford]]
 | oppervlak land = 14,357
 | oppervlak waoter = 12.6%
 | inwoeners = 3,574,097 (2010)
 | dichtheid = 271.40
-| tiedzone = Oost: ÜTC-5/-4
+| tiedzone = Oost: UTC-5/-4
 | antal graafschappen = 8
 | ofkorting = CT
 | Toe-etrejen = 9 january 1788
