--- a/Verleevdheid.mw
+++ b/Verleevdheid.mw
@@ -52,7 +52,7 @@ Belangriek bie verleevdheid is seksuele antrekkingskracht, al dreit et doar nich
 
 Verleevdheidsfantasieën zint nich etzölfde as [[seksuele fantasiejn|seksuele fantasieën]]; verleevdheidsfantasieën goat aait oaver dinge dee in et echt ook könt gebeuren. Iemand met verleevdheidsfantasieën hef der gin grip op. Seksuele fantasieën roop iej zölf op en könt ook boeten de verleevdheid umgoan of zik betrekken op anderen as 'n geleevden.
 
-Iej kriejt voak de behoofte de oandre an te roakn, te ömhelzn, te zoenn öf (zooas boven uut-elegd) te poarn.
+Verleevden hebbet vake de behoovde um den anderen an te raken, um den hals te vlegen, te kussen of seks met te hebben.
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Gemoedstoestaand]]
