Verwysing nå döärverwyssyde repareerd ([[Roet]] nå [[Roet (tiedschrift)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Chris_Canter.mw
+++ b/Chris_Canter.mw
@@ -1,6 +1,6 @@
 '''Chris Canter''' ([[Zwolle]], [[1980]]) is nen [[literatuur|skryver]] en [[dichtkünst|dichter]] in et [[neadersassisk]]. Van syne hande küm under meyr de verhalenbündel ''Moenen'' uut. 
 
-In [[2006]] debuteerden Canter in et [[drèents|drentske]] literäre tydskrivt [[Roet]], med ne ümmesetting van et neagende-eywske [[Latien|latynske]] leed ''Ut quid iubes pusiole''. Twey jår dårup küm syn eyrste eygene verhaal in datselvde blad. Seyd dee tyd sint dårin med regelmåt verhalen en essays van em te leasen. Up internet swarvet twey neaderlandske verhalen van em.<ref>[https://www.dbnl.org/auteurs/auteur.php?id=cant007 Dbnl.nl. Digitale Bibliotheek voor de Nederlandse letteren. "Chris Canter".] Bekeaken up den 18. määrt 2021.</ref>
+In [[2006]] debuteerden Canter in et [[drèents|drentske]] literäre tydskrivt [[Roet (tiedschrift)|Roet]], med ne ümmesetting van et neagende-eywske [[Latien|latynske]] leed ''Ut quid iubes pusiole''. Twey jår dårup küm syn eyrste eygene verhaal in datselvde blad. Seyd dee tyd sint dårin med regelmåt verhalen en essays van em te leasen. Up internet swarvet twey neaderlandske verhalen van em.<ref>[https://www.dbnl.org/auteurs/auteur.php?id=cant007 Dbnl.nl. Digitale Bibliotheek voor de Nederlandse letteren. "Chris Canter".] Bekeaken up den 18. määrt 2021.</ref>
 
 Wyders warkeden hee med an ''Vueltaal. Op fietse deur Drenthe'', en böökske van et [[Drèents|drentske]] [[Huus van de Taol]], wat uutegeaven wör vanweage de start van de [[Runde van Spanje]] (de ''Vuelta'') in de Provincy [[Drenthe]]. Dårin warren verskillende handige sinnekes in neaderlandsk, drentsk en spaansk upenöämen. De spaanske oaversettingen warren van Canter.
 
