*Empty MediaWiki Message*

--- a/Vechte.mw
+++ b/Vechte.mw
@@ -1,5 +1,5 @@
 [[Image:Location Overijsselse Vecht.PNG|thumb|250px|De Vechte]]
-De '''Vechte''' ([də v̯ɛχtə]) is 'n [[revier|regenwäterreviere]] in [[Duutslaand]] en [[Nederlaand]] ([[Oaveriessel]]). De reviere is 167 kilometer laank, woarvan 60 km in Nederlaand. Heur oorsprunk lig in 't [[Munsterlaand]] en ze mondt bi-j [[Zwolle]] uut in 't [[Zwärte Wäter]] mit 'n debiet van 45 töt 83 kubieke meter per sekonde. 't Streumgebied van de Vechte beslöt 3780 vierkaante kilometer. D' eerste schriftlike vermelding van de Vechte stamp uut um-en-bi-j [[1232]] en stiet in de [[Quedam narracio]], tenzi-j de [[Vidrus]] doaras [[Tacitus]] en [[Ptolemaeus]] 't oaver hebt dezölfde revier is as de Vechte.
+De '''Vechte''' is 'n [[revier|regenwäterreviere]] in [[Duutslaand]] en [[Nederlaand]] ([[Oaveriessel]]). De reviere is 167 kilometer laank, woarvan 60 km in Nederlaand. Heur oorsprunk lig in 't [[Munsterlaand]] en ze mondt bi-j [[Zwolle]] uut in 't [[Zwärte Wäter]] mit 'n debiet van 45 töt 83 kubieke meter per sekonde. 't Streumgebied van de Vechte beslöt 3780 vierkaante kilometer. D' eerste schriftlike vermelding van de Vechte stamp uut um-en-bi-j [[1232]] en stiet in de [[Quedam narracio]], tenzi-j de [[Vidrus]] doaras [[Tacitus]] en [[Ptolemaeus]] 't oaver hebt dezölfde revier is as de Vechte.
 
 In 't [[Nederlaands|Nederlaans]] nuumt ze de Vechte de 'Vecht', en vake de 'Overijsselse Vecht' umde'j joa ok de [[Vecht (revier)|Utrechtse Vecht]] hebt. In Duutslaand het de reviere de 'Vechte'. 't Oaveriesselse laandschop um de Vechte nuumt ze 't (Oaveriessels) [[Vechtdal]].
 
@@ -20,7 +20,12 @@ Haddenbarrug profileert zich in de zommermaonden as Klepperstad, naor de klepper
 ==Nedersaksies==
 't [[Nedersaksies]] dat esprökkn wödt langes 't Nederlaanse deel van de Vechte heurt bi-j 't [[Sallaans]], allewel 't deel rond [[Ommen (stad)|Ommen]] en [[Hardenbarg (stad)|'n Arnbarg]] ok wal [[Overiessels#Vechtdals|Vechtdals]] wödt enuumd. Taalinvloedn wödn vrogger deur haandel oaver de reviere verbreid: op kaarten in de dialektatlassn ku'j ziene dat woordn langes 't Duutse deel van de Vechte väle meer verwaant waarn an 't Sallaans as met de woordn uut aander soorten plat in 't [[graofschop Bentheim]]. De verkleinwoordn op -ien in et [[Waterplat]] bint hier meugelik veurbeeldn van.
 
-{{commonscat|Vecht(e)}}
+== Uutspraok in [[Internasjonaal Klaankenskrift|IPA]] ==
+[[Nederlaands Leegsaksisch|Nederlaands Nedersaksisch]]: [v̯ɛχtə]
+
+[[Duuts]]: [ˈfɛçtə]
+
+[[Nederlaands]]: [vɛxt]{{commonscat|Vecht(e)}}
 {{Begin|sdz}}
 
 [[Kategorie:Sallaands artikel]]
