*Empty MediaWiki Message*

--- a/Vechte.mw
+++ b/Vechte.mw
@@ -21,7 +21,7 @@ Haddenbarrug profileert zich in de zommermaonden as Klepperstad, naor de klepper
 't [[Nedersaksies]] dat esprökkn wödt langes 't Nederlaanse deel van de Vechte heurt bi-j 't [[Sallaans]], allewel 't deel rond [[Ommen (stad)|Ommen]] en [[Hardenbarg (stad)|'n Arnbarg]] ok wal [[Overiessels#Vechtdals|Vechtdals]] wödt enuumd. Taalinvloedn wödn vrogger deur haandel oaver de reviere verbreid: op kaarten in de dialektatlassn ku'j ziene dat woordn langes 't Duutse deel van de Vechte väle meer verwaant waarn an 't Sallaans as met de woordn uut aander soorten plat in 't [[graofschop Bentheim]]. De verkleinwoordn op -ien in et [[Waterplat]] bint hier meugelik veurbeeldn van.
 
 == Uutspraok in [[Internasjonaal Klaankenskrift|IPA]] ==
-[[Nederlaands Leegsaksisch|Nederlaands Nedersaksisch]]: [v̯ɛχtə]
+[[Sallaands]] en [[Graofschopper plat]]: [v̯ɛχtə]
 
 [[Duuts]]: [ˈfɛçtə]
 
