--- a/Haorste.mw
+++ b/Haorste.mw
@@ -40,7 +40,7 @@ De Roeten bint een [[kwel]] gebied.
 
 == Galleri'je ==
 <gallery widths="400" heights="400">
-ofbeelding:Ontginning, grondbewerking, egaliseren, bezanden, veenproppen, Haerst, Genne, Bestanddeelnr 159-0396.jpg|500px|In Haorste he-j veane-achtige grond en zaand/veanegrond. Ok is de baodem moerig.
+ofbeelding:Ontginning, grondbewerking, egaliseren, bezanden, veenproppen, Haerst, Genne, Bestanddeelnr 159-0396.jpg|In Haorste he-j veane-achtige grond en zaand/veanegrond. Ok is de baodem moerig.
 ofbeelding:Graftekst Lepejou Haerst Zwolle.JPG|Graf van Lepejou
 ofbeelding:A28 Verzorgingsplaats Haerst.JPG|[[Verzörgingsplääts Haorste]] an de [[Rieksweg 28|A28]]
 ofbeelding:Ontginning, zaaien en oogsten gewassen, grasland, Haerst, Genne, Bestanddeelnr 160-0265.jpg|Foto uut [[juli]] [[1958]] van Haorste/[[Genne]]
