--- a/Krentenstoete.mw
+++ b/Krentenstoete.mw
@@ -2,7 +2,7 @@ Een '''krentenstoete''' (oek wel: ''krentenbrood'' of ''krentenkrogge'') is een 
 
 Een "goed krentenstoete" ziet [[zwart]] van de krenten, of hef (zoas ze wel zegen) meer krenten as deeg.
 
-In [[Drenthe]] en [[Tweante|Twente]] wonnen aorig wat krentenstoete egeten, veural bie de [[koffie]]. 't Twentse krentenstoete (daor heet 't ''kreantewegge'') wonnen soms wel as een [[brood]] mit een lengte van aanderhalf tot twee meter ebakken en een breedte van ongeveer dartig centimeter. Vandaor dat ze deur meerdere personen edreugen wonnen. Dat gebeuren soms in een grote [[dook]], mar meestentieds op een [[planke]] of een [[ledder]]. Ze wonnen vake kedo egeven bie geboortes (veural de eerste in een huwelijk) deur femilielejen of klega's. 
+In [[Drenthe]] en [[Tweante|Twente]] wonnen aorig wat krentenstoete egeten, veural bie de [[koffie]]. 't Twentse krentenstoete (daor heet 't ''kreantewegge'') wonnen soms wel as een [[brood]] mit een lengte van aanderhalf tot twee meter ebakken en een breedte van ongeveer dartig centimeter. Vandaor dat ze deur meerdere personen edreugen wonnen. Dat gebeuren soms in een grote [[dook]], mar meestentieds op een [[planke]] of een [[ledder]]. Ze wonnen vake kedo egeven bie geboortes (veural de eerste in een huwelijk) deur femilielejen of klega's. Et geven van krentewegge bie een geboorte kwamp ook in et westen van Overiessel veur.<ref>Reeks Nederlandse Dialectatlassen. Zuid-Drenthe en Noord-Overijssel.</ref> 
 
 Krentenstoete wonnen vake [[zundag|'s zundaas]] egeten, mit [[feesdagen]] ([[Kìrsttied|Kars]] en [[Poaske|Paosen]]), bie een [[brulfte]] of bie gezinsuutbreiding.
 
@@ -24,6 +24,8 @@ Een [[brukjen|krentenbrukjen]] wonnen vake mit [[echte botter]] besmeerd en soms
 **''krint{{small()|en}}stoet''
 **''krente{{small()|n}}wegge'', ''krinte{{small()|n}}wegge''{{Info|Veur een grote stoete}}
 **''plas''{{Info|Veur een grote stoete}}
+*[[Sallaands]]:
+**''krintewege, krentewigge, krenteweage, krentewegge''
 *[[Tweants]]:
 **''kreantewegge''
 **''kreentnstoet{{small()|e}}''
