--- a/Krentenstoete.mw
+++ b/Krentenstoete.mw
@@ -39,5 +39,6 @@ Een [[brukjen|krentenbrukjen]] wonnen vake mit [[echte botter]] besmeerd en soms
 
 {{Dia|Disse pagina is eschreven in 't [[Nunspeets]]}}
 
+== Bronnen ==
 [[Kategorie:West-Veluws artikel]]
 [[Kategorie:Stoete]]
