--- a/Stoete.mw
+++ b/Stoete.mw
@@ -13,7 +13,7 @@ In [[Nederlaand]] wördt vake zowal bij 't [[mänèten|mörgeneten]] as [[middag
 == Nedersaksisch ==
 * [[Drèents]]: ''stoet{{small()|e}}'', ''stoede'' {{info|In 't Drèents hef ''brood'' de betiekenis ''roggebrood''}}
 * [[Graafschopper Platt]]: ''broad'' (Platduutse schriefwieze ''Broad'')
-* [[Sallands]]: ''brood'', ''stoete''
+* [[Sallands]]: ''brood'', ''stoete {{info|Stoete kan ook witbrood betekenen. Met brood wördt (wördden) väke roggebrood bedoeld.}}''
 * [[Grunnegs]]: ''stoede'', ''stoet{{small()|e}}'', ''stuut'' {{info|In t Grunnegs bestaait t woord ''brood'' ook, moar het t as Nederlaandse betaikenis ''roggebrood''}}
 * [[Oostfreisk]]: ''stoet'' (Platduutske skriefwies: ''Stuut'')
 * [[Veluws]]: ''brood'', ''stoete'', ''brooi'' ([[Scharpenzeel (Gelderlaand)|Sjaarpezeel]])
